manifests/combined-manifest.yaml
# postgre-db.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: postgres-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: postgres
  template:
    metadata:
      labels:
        app: postgres
    spec:
      containers:
        - name: postgres
          image: postgres:14.1
          ports:
            - containerPort: 5432
---
apiVersion: v1
kind: Service
metadata:
  name: postgres-service
spec:
  selector:
    app: postgres
  ports:
    - protocol: TCP
      port: 5432
      targetPort: 5432

# budget-app-web.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: budget-app-web
spec:
  replicas: 3
  selector:
    matchLabels:
      app: budget-app-web
  template:
    metadata:
      labels:
        app: budget-app-web
    spec:
      containers:
        - name: budget-app-web
          image: krishnavamshi933/budget-app-web:latest
          ports:
            - containerPort: 3000
---
apiVersion: v1
kind: Service
metadata:
  name: budget-app-web-service
spec:
  selector:
    app: budget-app-web
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3000
  type: NodePort
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: budget-app-web-ingress
spec:
  rules:
  - host: budget-app.example.com  # Replace with your actual hostname
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: budget-app-web-service
            port:
              number: 80
